--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
 		</div>
 
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/d3/7.0.0/d3.min.js"></script>
+		<!-- required to create color palette -->
+		<script src="https://d3js.org/d3-scale-chromatic.v1.min.js"></script>
 		<script src="script.js"></script>
 	</body>
 </html>
